--- a/WebContent/cadCategoria.xhtml
+++ b/WebContent/cadCategoria.xhtml
@@ -2,7 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui">
 
 <h:head></h:head>
 <h:body>
@@ -16,6 +17,7 @@
 			<h:commandButton value="Limpar" />
 			<h:commandButton value="Novo" />
 		</h:panelGrid>
+		<hr></hr>
 	</h:form>
 </h:body>
 </html>
